yeah more stuff! time for test

--- a/welcome.html
+++ b/welcome.html
@@ -49,6 +49,7 @@
 <body>
     <h1>Welcome to Inverse!</h1>
     <p>Inverse is a browser extension that allows you to <span class="zap">zap</span> and <span class="unzap">unzap</span> images on any webpage, giving you control over what you see.</p>
-    <button onclick="window.location.href='/welcome2.html'">Start -></button>
+    <button id="startBtn">Start -></button>
+    <script src="welcome.js"></script>
 </body>
 </html>
