--- a/welcome3.html
+++ b/welcome3.html
@@ -52,6 +52,11 @@
 <img src="https://www.slitro.studio/images/photography/bricks%202.JPG" alt="Demo of zapping an image" style="width:100%; border-radius: 8px; margin: 16px 0;">
 <img src="https://www.slitro.studio/images/photography/bricked%20up.JPG" alt="Demo of zapping an image" style="width:100%; border-radius: 8px; margin: 16px 0;">
 
-
+<button id="doneBtn">Done</button>
+<script>
+    document.getElementById("doneBtn").addEventListener("click", () => {
+        window.close();
+    });
+</script>
 </body>
 </html>
