--- a/welcome2.html
+++ b/welcome2.html
@@ -55,7 +55,8 @@
 <li>The removed images are remembered, so they stay gone even if you reopen the page</li>
 </ul>
 <p>To bring back individual images, click the Unzap button and then click the faded-out image you want to restore.</p>
-<button onclick="window.location.href='/welcome3.html'">Try it out -></button>
+<button id="nextBtn">Try it out -></button>
+<script src="welcome.js"></script>
 
 </body>
 </html>
