amp says this fixes it

--- a/welcome2.html
+++ b/welcome2.html
@@ -49,14 +49,13 @@
 <body>
     <h1>Zapping</h1>
 <ul>
-<li>Click the Inverse extension icon in your toolbar</li>
-<li>Hit the Zap button — your cursor will turn into a crosshair</li>
+<li>Click the Inverse extension icon in your toolbar (If its not there, press the puzzle piece icon, then the pin next to inverse)</li>
+<li>Hit the Zap button. Your cursor will turn into a crosshair</li>
 <li>Click any image on the page to remove it (it'll fade out and disappear)</li>
 <li>The removed images are remembered, so they stay gone even if you reopen the page</li>
 </ul>
 <p>To bring back individual images, click the Unzap button and then click the faded-out image you want to restore.</p>
-<button id="nextBtn">Try it out -></button>
-<script src="welcome.js"></script>
+<button onclick="window.location.href='/welcome4.html'">Done.</button>
 
 </body>
 </html>
