im slightly stupid

--- a/popup.html
+++ b/popup.html
@@ -65,6 +65,6 @@
     </style>
     <h1>Inverse</h1>
     <button id="zapClick">Zap</button>
-    <button id="resetClick">Reset</button>
+    <button id="resetClick">Unzap</button>
     <script src="popup.js"></script>
 </html>
