cleanup for ship

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html>
+<head>
     <style>
         /* Catppuccin Mocha palette */
         :root {
@@ -63,8 +63,11 @@
             color: var(--ctp-base);
         }
     </style>
+</head>
+<body>
     <h1>Inverse</h1>
     <button id="zapClick">Zap</button>
     <button id="resetClick">Unzap</button>
     <script src="popup.js"></script>
+</body>
 </html>
