--- a/welcome4.html
+++ b/welcome4.html
@@ -47,11 +47,9 @@
     </style>
 </head>
 <body>
-    <h1>Zapping</h1>
-
-<img src="https://www.slitro.studio/images/photography/bricks%202.JPG" alt="Demo of zapping an image" style="width:100%; border-radius: 8px; margin: 16px 0;">
-<img src="https://www.slitro.studio/images/photography/bricked%20up.JPG" alt="Demo of zapping an image" style="width:100%; border-radius: 8px; margin: 16px 0;">
-
+    <h1>Congrats!</h1>
+<p>You're all set up to start zapping images on the web. If you have any questions or feedback, feel free to reach out!</p>
+<p>You can close this page.</p>
 
 </body>
 </html>
