adding logos and stuff

--- a/welcome.html
+++ b/welcome.html
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+    <img src="inverse.png" alt="Inverse Logo" style="display:block;margin:0 auto 24px auto;max-width:120px;">
     <h1>Welcome to Inverse!</h1>
     <p>Inverse is a browser extension that allows you to <span class="zap">zap</span> and <span class="unzap">unzap</span> images on any webpage, giving you control over what you see.</p>
     <button id="startBtn">Start -></button>
